--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                                         d’être fiers :
                                     </p>
                                     <ul>
-                                        <li>34,2 millions d’euros de chiffre d’affaires au premier semestre 2025</li>
-                                        <li>2,3 millions d’euros de création</li>
-                                        <li>Une croissance de 7,1%</li>
+                                        <li class="disc">34,2 millions d’euros de chiffre d’affaires au premier semestre 2025</li>
+                                        <li class="disc">2,3 millions d’euros de création</li>
+                                        <li class="disc">Une croissance de 7,1%</li>
                                     </ul>
                                     <p>
                                         Ces chiffres ne sont pas que des indicateurs. Ils sont le reflet de notre
@@ -257,10 +257,10 @@
                                     </p>
                                     <p>Pour réussir, nous devons continuer à activer nos leviers de croissance :</p>
                                     <ul>
-                                        <li>La prospection</li>
-                                        <li>Le développement de notre base clients active</li>
-                                        <li>L’anticipation des précommandes</li>
-                                        <li>
+                                        <li class="disc">La prospection</li>
+                                        <li class="disc">Le développement de notre base clients active</li>
+                                        <li class="disc">L’anticipation des précommandes</li>
+                                        <li class="disc">
                                             La rigueur dans l’organisation de nos lancements produits (les plus gros
                                             déciles en premier)
                                         </li>
