--- a/index.html
+++ b/index.html
@@ -148,19 +148,31 @@
                                         références parmi les 10 plus importantes du marché des compléments alimentaires…
                                         et même 3 dans le TOP 20 des compléments alimentaires.
                                     </p>
-                                    <ul>
-                                        <li class="num">
-                                            <strong>ERGYPHILUS CONFORT</strong> est notre produit star et a encore un
+                                     <div class="row">
+                   <center> <div class="col-lg-2"> </div> 
+                    <div class="col-lg-8">	
+                        <div class="row ">
+                         <ul>
+                                        <li class="col-lg-12 confortplein roundedimg ">
+                                            <strong><h3>I</h3> ERGYPHILUS CONFORT</strong> est notre produit star et a encore un
                                             potentiel immense.
                                         </li>
-                                        <li class="num">
-                                            <strong>ERGYPHILUS INTIMA</strong> est déjà le numéro 1 des probiotiques
+                                        <li class="col-lg-12 femmeplein roundedimg">
+                                            <strong><h3>II</h3> ERGYPHILUS INTIMA</strong> est déjà le numéro 1 des probiotiques
                                             pour femmes.
                                         </li>
-                                        <li class="num">
-                                            <strong>ERGYMAG 90</strong> est un succès formidable sur le marché des.
+                                        <li class="col-lg-12 magplein roundedimg">
+                                            <h3>III</h3> <strong>ERGYMAG 90</strong> est un succès formidable sur le marché des.
                                         </li>
                                     </ul>
+                            
+                        </div>
+                       </div>
+                       <div class="col-lg-2">
+                       </div> 
+                           </center> 
+                    </div>
+                                   
                                     <p>
                                         Il est essentiel de les référencer partout pour que leur potentiel s’exprime
                                         pleinement.
