--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                             </p>
 
                                             <p>
-                                                Il sera l’un des piliers de notre gamme  <strong class="nuitplein">ERGYNUIT</strong>, la gamme experte du
+                                                Il sera l’un des piliers de notre gamme  <strong class="nuitplein">ERGYNUIT<sup class="nuitplein">®</sup></strong>, la gamme experte du
                                                 sommeil.</p>
                                             <p>D’ailleurs, notre
                                                 <strong>présentoir de comptoir spécifique</strong> pour cette nouveauté
@@ -274,18 +274,18 @@
                                         engagement, de notre dynamisme et de la confiance de nos clients.
                                     </p>
                                     <p>
-                                        Mais ce n’est qu’un début. Nous avons lancé lors de ce séminaire <strong class="nuitplein">Ergynuit spray
+                                        Mais ce n’est qu’un début. Nous avons lancé lors de ce séminaire <strong class="nuitplein">ERGYNUIT<sup class="nuitplein">®</sup> spray
                                         flash</strong>, une nouveauté qui promet d’accélérer notre visibilité. Nous allons
-                                        également marquer les esprits avec notre <strong class="immunite">nouvelle gamme Ergyphilus </strong>, désormais
+                                        également marquer les esprits avec notre <strong class="immunite">nouvelle gamme <span  style="text-transform: uppercase;">Ergyphilus</span><sup class="immunite">®</sup> </strong>, désormais
                                         hors du frigo, pour démultiplier nos ventes et élargir notre présence sur le
                                         marché.
                                     </p>
                                     
                                     <p>
-                                        N’oublions pas non plus nos piliers : <strong class="nuitplein">Ergynuit Sommeil, Sommeil Fort et Sommeil
+                                        N’oublions pas non plus nos piliers : <strong class="nuitplein">ERGYNUIT<sup class="nuitplein">®</sup> Sommeil, Sommeil Fort et Sommeil
                                         Profond</strong>. Ce sont des produits solides qui doivent continuer à croitre et à
                                         accompagner nos objectifs.
-                                    </p>
+                                    </p> 
                                     <div class="row">
                                         <div class="col-lg-1"></div>
                                         <div class="col-lg-10">
@@ -334,10 +334,11 @@
                                     </div>
 
                                     <p>
-                                        <br />
-                                        Enfin, n’oublions pas nos outils de communication. Ils sont essentiels pour
-                                        amplifier notre visibilité auprès du grand public comme des professionnels de
-                                        santé. Utilisons-les pleinement pour marquer notre différence.
+                                        <br>
+                                        Enfin, gardons présent à l'esprit l'importance de nos outils de&nbsp;communication.
+                                        Ils sont essentiels pour amplifier notre visibilité auprès du grand public comme
+                                        des professionnels de santé. Utilisons-les pleinement pour marquer notre
+                                        différence.
                                     </p>
                                     <p>
                                         Continuons à avancer, avec énergie, ambition et fierté. L’avenir est devant nous
