--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                         <div class="col-lg-1"></div>
                                     </div>
                                     <p><br>
-                                        Ce séminaire a été également l’occasion de revenir sur notre gamme <strong>Ergytonic</strong>.
+                                        Ce séminaire a été également l’occasion de revenir sur notre gamme <strong class="vitalite" style="text-transform: uppercase;">Ergytonic</strong>.
                                         Après un succès en nombre d’unités vendues, nous passons maintenant à une étape
                                         clé : la formation. C’est elle qui nous permettra de booster encore davantage
                                         les ventes et d’assurer des réassorts réguliers.
@@ -333,7 +333,7 @@
                                         </center>
                                     </div>
 
-                                    <p>
+                                    <p style="letter-spacing:-0.02em;" >
                                         <br>
                                         Enfin, gardons présent à l'esprit l'importance de nos outils de&nbsp;communication.
                                         Ils sont essentiels pour amplifier notre visibilité auprès du grand public comme
