--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                         énergie positive.
                                     </p>
                                     <p data-aos="fade-up" data-aos-duration="1500">
-                                        A très bientôt, <strong class="enlufin">»</strong>
+                                        A très bientôt. <strong class="enlufin">»</strong>
                                     </p>
                                 </div>
                                 <div class="row">
