--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             </div>
                             <div class="col-lg-9 rounded2 bf" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1500">
-                                    <p><strong class="enlu">«</strong> Bonjour à toutes et à tous,</p>
+                                    <p><span class="enlu">«</span> Bonjour à toutes et à tous,</p>
                                     <p>
                                         Notre séminaire d’Août à Arcachon a marqué plusieurs évolutions fortes dans nos
                                         gammes et l’importance croissante de notre visibilité en officine.
@@ -147,7 +147,7 @@
                                         Nous avons vu ensemble l’importance de la disposition des produits de manière
                                         compréhensible, l’utilité de nos présentoirs, de nos vitrophanies, de nos
                                         réglettes et séparateurs linéaires, de l’étagère derrière le comptoir…
-                                        <strong>un produit qui n’est pas vu ne peut pas être choisi.</strong> Il est
+                                        <span class="strong">Un produit qui n’est pas vu ne peut pas être choisi.</span> Il est
                                         donc essentiel de booster la visibilité de notre offre.
                                     </p>
                                     <!--<div class="row"></div>
@@ -176,7 +176,9 @@
                     </div>-->
 
                                     <p>
-                                        Notre innovation <strong class="nuitplein">SPRAY FLASH</strong> a reçu un
+                                        Notre innovation <span class="nuitplein strong"
+                                                               >ERGYNUIT<sup class="nuitplein">®</sup> <span class = "ita thin">Spray</span> <span class="ita">Flash</span></span
+                                        > a reçu un
                                         accueil très enthousiaste.
                                     </p>
                                     <div class="row">
@@ -199,13 +201,13 @@
 
                                             <p>
                                                 Il sera l’un des piliers de notre gamme
-                                                <strong class="nuitplein"
-                                                    >ERGYNUIT<sup class="nuitplein">®</sup></strong
+                                                <span class="nuitplein strong"
+                                                    >ERGYNUIT<sup class="nuitplein">®</sup></span
                                                 >, la gamme experte du sommeil.
                                             </p>
                                             <p>
                                                 D’ailleurs, notre
-                                                <strong>présentoir de comptoir spécifique</strong> pour cette nouveauté
+                                                <span class="strong">présentoir de comptoir spécifique</span> pour cette nouveauté
                                                 est déjà très apprécié car il apporte une visibilité nouvelle.
                                             </p>
                                         </div>
@@ -216,7 +218,7 @@
                                         énergie positive.
                                     </p>
                                     <p data-aos="fade-up" data-aos-duration="1500">
-                                        A très bientôt. <strong class="enlufin">»</strong>
+                                        A très bientôt. <span class="enlufin">»</span>
                                     </p>
                                 </div>
                                 <div class="row">
@@ -241,7 +243,7 @@
                         <div class="row" data-aos="fade-up" data-aos-duration="1500">
                             <div class="col-lg-9 rounded2 bf" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1500">
-                                    <p><strong class="enlu">«</strong> Chers collaborateurs,</p>
+                                    <p><span class="enlu">«</span> Chers collaborateurs,</p>
                                     <p>
                                         C’était un réel plaisir de vous avoir tous retrouvés, pour notre séminaire
                                         d’Août, au Thalazur d’Arcachon, dans un cadre magnifique qui a nourri nos
@@ -255,14 +257,14 @@
                                             <div class="col-lg-8">
                                                 <div class="row">
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                        <strong>34,2 millions d’euros de chiffre </strong> d’affaires
+                                                        <span class="strong">34,2 millions d’euros de chiffre </span> d’affaires
                                                         au&nbsp;premier semestre 2025
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        <strong>2,3 millions d’euros </strong> de création
+                                                        <span class="strong">2,3 millions d’euros </span> de création
                                                     </div>
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                        Une croissance de <strong>+7,1%</strong>
+                                                        Une croissance de <span class="strong">+7,1%</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -270,29 +272,28 @@
                                         </center>
                                     </div>
 
-                                    <p>
+                                    <p><br />
                                         Ces chiffres ne sont pas que des indicateurs. Ils sont le reflet de notre
                                         engagement, de notre dynamisme et de la confiance de nos clients.
                                     </p>
                                     <p>
                                         Mais ce n’est qu’un début. Nous avons lancé lors de ce séminaire
-                                        <strong class="nuitplein"
-                                            >ERGYNUIT<sup class="nuitplein">®</sup> spray flash</strong
+                                        <span class="nuitplein strong"
+                                              >ERGYNUIT<sup class="nuitplein">®</sup> <span class = "ita thin">Spray</span> <span class="ita">Flash</span></span
                                         >, une nouveauté qui promet d’accélérer notre visibilité. Nous allons également
                                         marquer les esprits avec notre
-                                        <strong class="immunite"
-                                            >nouvelle gamme <span style="text-transform: uppercase">Ergyphilus</span
-                                            ><sup class="immunite">®</sup> </strong
+                                        <span class="immunite"
+                                            >nouvelle gamme <span class="strong" style="text-transform: uppercase">Ergyphilus</span
+                                            ><sup class="immunite">®</sup></span
                                         >, désormais hors du frigo, pour démultiplier nos ventes et élargir notre
                                         présence sur le marché.
                                     </p>
 
                                     <p>
                                         N’oublions pas non plus nos piliers :
-                                        <strong class="nuitplein"
-                                            >ERGYNUIT<sup class="nuitplein">®</sup> Sommeil, Sommeil Fort et Sommeil
-                                            Profond</strong
-                                        >. Ce sont des produits solides qui doivent continuer à croitre et à accompagner
+                                        <span class="nuitplein strong"
+                                              >ERGYNUIT<sup class="nuitplein">®</sup><span class="thin">,</span><span class="thin ita"> Sommeil</span> <span class="ita">Fort</span> <span class="thin">et</span> <span class="thin ita">Sommeil</span>
+                                            <span class="ita">Profond</span></span>. Ce sont des produits solides qui doivent continuer à croitre et à accompagner
                                         nos objectifs.
                                     </p>
                                     <div class="row">
@@ -320,9 +321,10 @@
                                     </div>
                                     <p>
                                         <br />
+                                        
                                         Ce séminaire a été également l’occasion de revenir sur notre gamme
-                                        <strong class="vitalite" style="text-transform: uppercase"
-                                            >Ergytonic<sup class="vitalite">®</sup></strong
+                                        <span class="vitalite strong" style="text-transform: uppercase"
+                                            >Ergytonic<sup class="vitalite">®</sup></span
                                         >. Après un succès en nombre d’unités vendues, nous passons maintenant à une
                                         étape clé : la formation. C’est elle qui nous permettra de booster encore
                                         davantage les ventes et d’assurer des réassorts réguliers.
@@ -342,7 +344,7 @@
                                                         L’anticipation des précommandes
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        La rigueur dans l’organisationde nos lancements produits (les
+                                                        La rigueur dans l’organisation de nos lancements produits (les
                                                         plus gros déciles en&nbsp;premier)
                                                     </div>
                                                 </div>
@@ -360,7 +362,7 @@
                                     </p>
                                     <p>
                                         Continuons à avancer, avec énergie, ambition et fierté. L’avenir est devant nous
-                                        et il s’annonce prometteur. <strong class="enlufin">»</strong>
+                                        et il s’annonce prometteur. <span class="enlufin">»</span>
                                     </p>
                                 </div>
                                 <div class="row">
