--- a/index.html
+++ b/index.html
@@ -140,15 +140,37 @@
                                 <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1500">
                                     <p><span class="enlu">«</span> Bonjour à toutes et à tous,</p>
                                     <p>
-                                        Notre séminaire d’Août à Arcachon a marqué plusieurs évolutions fortes dans nos
-                                        gammes et l’importance croissante de notre visibilité en officine.
+                                        Notre séminaire d’Août à Arcachon a marqué plusieurs évolutions fortes dans nos gammes et l’importance croissante de notre visibilité en officine.
+
+
                                     </p>
                                     <p>
-                                        Nous avons vu ensemble l’importance de la disposition des produits de manière
-                                        compréhensible, l’utilité de nos présentoirs, de nos vitrophanies, de nos
-                                        réglettes et séparateurs linéaires, de l’étagère derrière le comptoir…
-                                        <span class="strong">Un produit qui n’est pas vu ne peut pas être choisi.</span> Il est
-                                        donc essentiel de booster la visibilité de notre offre.
+                                        Nous avons vu ensemble 3 éléments clés :
+                                        <div class="row">
+                                        <!--<h2 class="titrebf aos-init aos-animate" data-aos="fade-right" data-aos-duration="1500">  Un bilan 2025 toujours aussi solide </h2>-->
+                                        <center>
+                                            <div class="col-lg-1"></div>
+                                            <div class="col-lg-10">
+                                                <div class="row">
+                                                    <div class="col-lg-12 editoplein roundedimg">
+                                                        L’importance du choix des produits en officine et de leur disposition en linéaire
+                                                    </div>
+                                                    <div class="col-lg-12 envplein roundedimg">
+                                                        L’utilité de nos présentoirs, de nos vitrophanies, de nos réglettes et séparateurs linéaires, ainsi que de l’étagère derrière le comptoir…<br><span class="strong"> un produit qui n’est pas vu ne peut pas être choisi.</span> 
+                                                    </div>
+                                                    <div class="col-lg-12 editoplein roundedimg">
+                                                      Notre intérêt à systématiser nos best-sellers chez tous nos clients.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-1"></div>
+                                        </center>
+                                    </div>
+                                    <br>
+L’importance du choix des produits en officine et de leur disposition en linéaire, 
+	L’utilité de nos présentoirs, de nos vitrophanies, de nos réglettes et séparateurs linéaires, ainsi que de l’étagère derrière le comptoir… un produit qui n’est pas vu ne peut pas être choisi. 
+	Notre intérêt à systématiser nos best-sellers chez tous nos clients.
+
                                     </p>
                                     <!--<div class="row"></div>
                    <center> <div class="col-lg-2"> </div> 
@@ -175,12 +197,7 @@
                            </center> 
                     </div>-->
 
-                                    <p>
-                                        Notre innovation <span class="nuitplein strong"
-                                                               >ERGYNUIT<sup class="nuitplein">®</sup> <span class = "ita thin">Spray</span> <span class="ita">Flash</span></span
-                                        > a reçu un
-                                        accueil très enthousiaste.
-                                    </p>
+                                   
                                     <div class="row">
                                         <div class="col-lg-4 lex-mid" data-aos="fade-up" data-aos-duration="1500">
                                             <img
@@ -193,12 +210,20 @@
                                         </div>
                                         <div class="col-lg-8" data-aos="fade-up" data-aos-duration="1500">
                                             <p>
-                                                Cette solution par pulvérisation sublinguale favorisera grandement
-                                                l’endormissement des plus récalcitrants
-
-                                                <img src="img/smile.svg" class="" style="width: 18px" alt="" />.
+                                                Par ailleurs, notre innovation
+                                                <span class="nuitplein strong"
+                                                    >ERGYNUIT<sup class="nuitplein">®</sup>
+                                                    <span class="ita thin">Spray</span>
+                                                    <span class="ita">Flash</span></span
+                                                >
+                                                a reçu un accueil très enthousiaste. Cette solution par pulvérisation
+                                                sublinguale favorisera grandement l’endormissement des plus
+                                                récalcitrants<img
+                                                    src="img/smile.svg"
+                                                    class=""
+                                                    style="width: 18px"
+                                                    alt="" />.
                                             </p>
-
                                             <p>
                                                 Il sera l’un des piliers de notre gamme
                                                 <span class="nuitplein strong"
@@ -207,8 +232,8 @@
                                             </p>
                                             <p>
                                                 D’ailleurs, notre
-                                                <span class="strong">présentoir de comptoir spécifique</span> pour cette nouveauté
-                                                est déjà très apprécié car il apporte une visibilité nouvelle.
+                                                <span class="strong">présentoir de comptoir spécifique</span> pour cette
+                                                nouveauté est déjà très apprécié car il apporte une visibilité nouvelle.
                                             </p>
                                         </div>
                                     </div>
