--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                                         L’importance du choix des produits en officine et de leur disposition en linéaire
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        L’utilité de nos présentoirs, de nos vitrophanies, de nos réglettes et séparateurs linéaires, ainsi que de l’étagère derrière le comptoir…<br><span class="strong"> un produit qui n’est pas vu ne peut pas être choisi.</span> 
+                                                        L’utilité de nos présentoirs, de nos vitrophanies, de nos réglettes et séparateurs linéaires, ainsi que de l’étagère derrière le comptoir…<br><span class="semistrong"> Un produit qui n’est pas vu ne peut pas être choisi.</span> 
                                                     </div>
                                                     <div class="col-lg-12 editoplein roundedimg">
                                                       Notre intérêt à systématiser nos best-sellers chez tous nos clients.
@@ -166,12 +166,8 @@
                                             <div class="col-lg-1"></div>
                                         </center>
                                     </div>
-                                    <br>
-L’importance du choix des produits en officine et de leur disposition en linéaire, 
-	L’utilité de nos présentoirs, de nos vitrophanies, de nos réglettes et séparateurs linéaires, ainsi que de l’étagère derrière le comptoir… un produit qui n’est pas vu ne peut pas être choisi. 
-	Notre intérêt à systématiser nos best-sellers chez tous nos clients.
+                                    <p>
 
-                                    </p>
                                     <!--<div class="row"></div>
                    <center> <div class="col-lg-2"> </div> 
                     <div class="col-lg-8">	
@@ -232,7 +228,7 @@ L’importance du choix des produits en officine et de leur disposition en liné
                                             </p>
                                             <p>
                                                 D’ailleurs, notre
-                                                <span class="strong">présentoir de comptoir spécifique</span> pour cette
+                                                <span class="semistrong">présentoir de comptoir spécifique</span> pour cette
                                                 nouveauté est déjà très apprécié car il apporte une visibilité nouvelle.
                                             </p>
                                         </div>
@@ -282,14 +278,14 @@ L’importance du choix des produits en officine et de leur disposition en liné
                                             <div class="col-lg-8">
                                                 <div class="row">
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                        <span class="strong">34,2 millions d’euros de chiffre </span> d’affaires
+                                                        <span class="semistrong">34,2 millions d’euros de chiffre </span> d’affaires
                                                         au&nbsp;premier semestre 2025
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        <span class="strong">2,3 millions d’euros </span> de création
+                                                        <span class="semistrong">2,3 millions d’euros </span> de création
                                                     </div>
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                        Une croissance de <span class="strong">+7,1%</span>
+                                                        Une croissance de <span class="semistrong">+7,1%</span>
                                                     </div>
                                                 </div>
                                             </div>
