--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
                                             <div class="col-lg-8">
                                                 <div class="row">
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                        <span class="semistrong">34,2 millions d’euros de chiffre </span> d’affaires
+                                                        <span class="semistrong">34,2 millions d’euros</span>  de chiffre d’affaires
                                                         au&nbsp;premier semestre 2025
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        <span class="semistrong">2,3 millions d’euros </span> de création
+                                                        <span class="semistrong">2,3 millions d’euros </span> de chiffre d’affaires sur les&nbsp;nouveaux produits
                                                     </div>
                                                     <div class="col-lg-12 editoplein roundedimg">
                                                         Une croissance de <span class="semistrong">+7,1%</span>
@@ -365,7 +365,8 @@
                                                         L’anticipation des précommandes
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        La rigueur dans l’organisation de nos lancements produits (les
+                                                        La rigueur dans l’organisation de nos lancements produits<br>
+                                                        (les
                                                         plus gros déciles en&nbsp;premier)
                                                     </div>
                                                 </div>
