--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                                 >
                                                 a reçu un accueil très enthousiaste. Cette solution par pulvérisation
                                                 sublinguale favorisera grandement l’endormissement des plus
-                                                récalcitrants<img
+                                                récalcitrants <img
                                                     src="img/smile.svg"
                                                     class=""
                                                     style="width: 18px"
@@ -313,8 +313,11 @@
                                     <p>
                                         N’oublions pas non plus nos piliers :
                                         <span class="nuitplein strong"
-                                              >ERGYNUIT<sup class="nuitplein">®</sup><span class="thin">,</span><span class="thin ita"> Sommeil</span> <span class="ita">Fort</span> <span class="thin">et</span> <span class="thin ita">Sommeil</span>
-                                            <span class="ita">Profond</span></span>. Ce sont des produits solides qui doivent continuer à croitre et à accompagner
+                                            >ERGYNUIT<sup class="nuitplein">®</sup><span class="thin">,</span
+                                            ><span class="thin ita"> Sommeil</span> <span class="ita">Fort</span>
+                                            <span class="thin">et</span> <span class="thin ita">Sommeil</span>
+                                            <span class="ita">Profond</span></span
+                                        >. Ce sont des produits solides qui doivent continuer à croître et à accompagner
                                         nos objectifs.
                                     </p>
                                     <div class="row">
