--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                                                         au&nbsp;premier semestre 2025
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        <span class="semistrong">+ 2,3 millions d’euros </span> de chiffre d’affaires par apport au premier semestre 2024
+                                                        <span class="semistrong">+ 2,3 millions d’euros </span> de chiffre d’affaires par rapport au premier semestre 2024
                                                     </div>
                                                     <div class="col-lg-12 editoplein roundedimg">
                                                         Une croissance de <span class="semistrong">+7,1%</span>
