--- a/index.html
+++ b/index.html
@@ -153,13 +153,21 @@
                                             <div class="col-lg-10">
                                                 <div class="row">
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                        L’importance du choix des produits en officine et de leur disposition en linéaire
+                                                        Notre intérêt à systématiser nos best-sellers chez tous nos
+                                                        clients
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
-                                                        L’utilité de nos présentoirs, de nos vitrophanies, de nos réglettes et séparateurs linéaires, ainsi que de l’étagère derrière le comptoir…<br><span class="semistrong"> Un produit qui n’est pas vu ne peut pas être choisi.</span> 
+                                                        L’impact commercial de la disposition de chaque référence en
+                                                        linéaire : merchandising à hauteur des yeux, duplication des
+                                                        références plus fortes…
                                                     </div>
                                                     <div class="col-lg-12 editoplein roundedimg">
-                                                      Notre intérêt à systématiser nos best-sellers chez tous nos clients.
+                                                        L’utilité de nos présentoirs, de nos vitrophanies, de nos
+                                                        réglettes et séparateurs linéaires, ainsi que de l’étagère
+                                                        derrière le comptoir… <br>
+                                                        <span class="semistrong">
+                                                            Un produit qui n’est pas vu ne peut pas être choisi.</span
+                                                        >
                                                     </div>
                                                 </div>
                                             </div>
@@ -193,7 +201,14 @@
                            </center> 
                     </div>-->
 
-                                   
+                                   <p><br>
+                                                Par ailleurs, notre innovation
+                                                <span class="nuitplein strong"
+                                                    >ERGYNUIT<sup class="nuitplein">®</sup>
+                                                    <span class="ita thin">Spray</span>
+                                                    <span class="ita">Flash</span></span
+                                                >
+                                                a reçu un accueil très enthousiaste. </p>
                                     <div class="row">
                                         <div class="col-lg-4 lex-mid" data-aos="fade-up" data-aos-duration="1500">
                                             <img
@@ -205,14 +220,7 @@
                                                 data-aos-duration="1500" />
                                         </div>
                                         <div class="col-lg-8" data-aos="fade-up" data-aos-duration="1500">
-                                            <p>
-                                                Par ailleurs, notre innovation
-                                                <span class="nuitplein strong"
-                                                    >ERGYNUIT<sup class="nuitplein">®</sup>
-                                                    <span class="ita thin">Spray</span>
-                                                    <span class="ita">Flash</span></span
-                                                >
-                                                a reçu un accueil très enthousiaste. Cette solution par pulvérisation
+                                            <p>Cette solution par pulvérisation
                                                 sublinguale favorisera grandement l’endormissement des plus
                                                 récalcitrants <img
                                                     src="img/smile.svg"
@@ -234,7 +242,7 @@
                                         </div>
                                     </div>
 
-                                    <p data-aos="fade-up" data-aos-duration="1500">
+                                    <p data-aos="fade-up" data-aos-duration="1500"><br>
                                         Je vous remercie toutes et tous pour nos échanges constructifs et pour votre
                                         énergie positive.
                                     </p>
