--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-12 editoplein roundedimg">
                                                         Notre intérêt à systématiser nos best-sellers chez tous nos
-                                                        clients
+                                                        clients.
                                                     </div>
                                                     <div class="col-lg-12 envplein roundedimg">
                                                         L’impact commercial de la disposition de chaque référence en
@@ -548,4 +548,5 @@
 
         <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     </body>
+
 </html>
