--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <div class="col-lg-12" data-aos="fade-up" data-aos-duration="1500">
                                     <p class="text-center">
                                         <span class="semispace strong immunite biig "
-                                            >Un produit qui n’est pas vu ne peut pas être choisi.</span
+                                            >Un produit qui n’est pas vu ne peut pas être choisi</span
                                         >
 
                                         <br />
@@ -558,4 +558,5 @@
 
         <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     </body>
+
 </html>
